@@ -341,17 +341,21 @@
     <bean id="ensemblPrep" class="edu.mcw.rgd.gff3.EnsemblPrep">
         <property name="outDir" value="data/Ensembl/"/>
         <property name="ensemblGff">
-            <map>
-                <entry key="381" value="https://ftp.ensembl.org/pub/current_gff3/rattus_norvegicus/Rattus_norvegicus.GRCr8.115.gff3.gz"></entry>
-                <entry key="40"  value="https://ftp.ensembl.org/pub/current_gff3/homo_sapiens/Homo_sapiens.GRCh38.115.gff3.gz"></entry>
-                <entry key="240" value="https://ftp.ensembl.org/pub/current_gff3/mus_musculus/Mus_musculus.GRCm39.115.gff3.gz"></entry>
-                <entry key="912" value="https://ftp.ensembl.org/pub/current_gff3/sus_scrofa/Sus_scrofa.Sscrofa11.1.115.gff3.gz"></entry>
-                <entry key="512" value="https://ftp.ensembl.org/pub/current_gff3/pan_paniscus/Pan_paniscus.panpan1.1.115.gff3.gz"></entry>
-                <entry key="638" value="https://ftp.ensembl.org/pub/current_gff3/canis_lupus_familiaris/Canis_lupus_familiaris.ROS_Cfam_1.0.115.gff3.gz"></entry>
-                <entry key="45"  value="https://ftp.ensembl.org/pub/current_gff3/chinchilla_lanigera/Chinchilla_lanigera.ChiLan1.0.115.gff3.gz"></entry>
-                <entry key="1312" value="https://ftp.ensembl.org/pub/current_gff3/chlorocebus_sabaeus/Chlorocebus_sabaeus.ChlSab1.1.115.chr.gff3.gz"></entry>
-                <entry key="1411" value="https://ftp.ensembl.org/pub/current_gff3/heterocephalus_glaber_female/Heterocephalus_glaber_female.Naked_mole-rat_maternal.115.gff3.gz"></entry>
-            </map>
+            <list>
+                <value>https://ftp.ensembl.org/pub/current_gff3/rattus_norvegicus/Rattus_norvegicus.GRCr8.115.gff3.gz</value>
+                <value>https://ftp.ensembl.org/pub/current_gff3/rattus_norvegicus_shrspbbbutx/Rattus_norvegicus_shrspbbbutx.UTH_Rnor_SHRSP_BbbUtx_1.0.115.gff3.gz</value>
+                <value>https://ftp.ensembl.org/pub/current_gff3/rattus_norvegicus_shrutx/Rattus_norvegicus_shrutx.UTH_Rnor_SHR_Utx.115.gff3.gz</value>
+                <value>https://ftp.ensembl.org/pub/current_gff3/rattus_norvegicus_wkybbb/Rattus_norvegicus_wkybbb.UTH_Rnor_WKY_Bbb_1.0.115.gff3.gz</value>
+
+                <value>https://ftp.ensembl.org/pub/current_gff3/homo_sapiens/Homo_sapiens.GRCh38.115.gff3.gz</value>
+                <value>https://ftp.ensembl.org/pub/current_gff3/mus_musculus/Mus_musculus.GRCm39.115.gff3.gz</value>
+                <value>https://ftp.ensembl.org/pub/current_gff3/sus_scrofa/Sus_scrofa.Sscrofa11.1.115.gff3.gz</value>
+                <value>https://ftp.ensembl.org/pub/current_gff3/pan_paniscus/Pan_paniscus.panpan1.1.115.gff3.gz</value>
+                <value>https://ftp.ensembl.org/pub/current_gff3/canis_lupus_familiaris/Canis_lupus_familiaris.ROS_Cfam_1.0.115.gff3.gz</value>
+                <value>https://ftp.ensembl.org/pub/current_gff3/chinchilla_lanigera/Chinchilla_lanigera.ChiLan1.0.115.gff3.gz</value>
+                <value>https://ftp.ensembl.org/pub/current_gff3/chlorocebus_sabaeus/Chlorocebus_sabaeus.ChlSab1.1.115.chr.gff3.gz</value>
+                <value>https://ftp.ensembl.org/pub/current_gff3/heterocephalus_glaber_female/Heterocephalus_glaber_female.Naked_mole-rat_maternal.115.gff3.gz</value>
+            </list>
         </property>
     </bean>
 
