@@ -1,6 +1,7 @@
 Jan 21, 2026
   ensembl: updated to build 115
-  
+  ensembl: added rat assemblies UTH_Rnor_SHRSP_BbbUtx_1.0, UTH_Rnor_SHR_Utx and UTH_Rnor_WKY_Bbb_1.0
+
 Jan 13, 2026
   ontologies: set up 'disease' and 'chebi' loggers
 
